--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 EMAILPASSWORD = 'fosd eoty zewp rnml'
+POST = 10617,
+HOST = 'groupchatapp-myprojectt.a.aivencloud.com',
+USERNAME = 'avnadmin',
+PASSWORD = 'AVNS_MzT6WhP1gRr5eFmTSjj',
+DATABASE = 'defaultdb',
